// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`non-tests to document the State Machines - gem2s local development 1`] = `

{
  "Comment": "Gem2s Pipeline for clusterEnv 'development'",
  "StartAt": "DeleteCompletedPipelineWorker",
  "States": {
    "DeleteCompletedPipelineWorker": {
      "Next": "LaunchNewPipelineWorker",
      "ResultPath": null,
      "Type": "Task",
      "Comment": "Removes Docker containers with pipeline runs on the local machine.",
      "Resource": "arn:aws:states:::lambda:invoke",
      "Parameters": {
        "FunctionName": "arn:aws:lambda:eu-west-1:mock-account-id:function:remove-previous-pipeline-containers"
      }
    },
    "LaunchNewPipelineWorker": {
      "Next": "DownloadGem",
      "ResultPath": null,
      "Type": "Task",
      "Resource": "arn:aws:states:::lambda:invoke",
      "Parameters": {
        "FunctionName": "arn:aws:lambda:eu-west-1:mock-account-id:function:local-container-launcher",
        "Payload": {
          "image": "biomage-pipeline-runner",
          "name": "gem2s-runner",
          "detached": true,
          "activityArn": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713"
        }
      }
    },
    "DownloadGem": {
      "Next": "PreProcessing",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "downloadGem",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PreProcessing": {
      "Next": "EmptyDrops",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "preproc",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "EmptyDrops": {
      "Next": "DoubletScores",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "emptyDrops",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScores": {
      "Next": "CreateSeurat",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "doubletScores",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CreateSeurat": {
      "Next": "PrepareExperiment",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "createSeurat",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PrepareExperiment": {
      "Next": "UploadToAWS",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "prepareExperiment",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "UploadToAWS": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "uploadToAWS",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      }
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-development-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"gem2s\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - gem2s production 1`] = `

{
  "Comment": "Gem2s Pipeline for clusterEnv 'production'",
  "StartAt": "RequestPod",
  "States": {
    "RequestPod": {
      "ResultPath": null,
      "Next": "WaitForPod",
      "Comment": "Send a message through SNS so that the API assigns a pod to the pipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-production-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"assignPodToPipeline\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"experimentId\\":\\"mock-experiment-id\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"gem2s\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "WaitForPod": {
      "ResultPath": null,
      "Next": "DownloadGem",
      "Type": "Map",
      "ItemsPath": "$.retries",
      "MaxConcurrency": 1,
      "Retry": [
        {
          "ErrorEquals": [
            "NoPodAssigned"
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 13,
          "BackoffRate": 1.5
        }
      ],
      "Iterator": {
        "StartAt": "GetAssignedPod",
        "States": {
          "GetAssignedPod": {
            "Next": "IsPodAssigned",
            "Type": "Task",
            "Comment": "Retrieves first unassigned and running pipeline pod.",
            "Resource": "arn:aws:states:::eks:call",
            "Parameters": {
              "ClusterName": "mock-cluster-name",
              "CertificateAuthority": "mock-ca",
              "Endpoint": "https://RANDOMSTRING.gr7.eu-west-1.eks.amazonaws.com",
              "Method": "GET",
              "Path": "/api/v1/namespaces/pipeline-test-namespace/pods",
              "QueryParameters": {
                "labelSelector": [
                  "type=pipeline,activityId=biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713"
                ]
              }
            }
          },
          "IsPodAssigned": {
            "Type": "Choice",
            "Comment": "Redirects to an error state if the pipeline pod is not assigned yet.",
            "Choices": [
              {
                "Variable": "$.ResponseBody.items[0]",
                "IsPresent": false,
                "Next": "NoPodAssigned"
              }
            ],
            "Default": "ReadyToRun"
          },
          "NoPodAssigned": {
            "Type": "Fail",
            "Cause": "No available and running pipeline pods.",
            "Error": "NoPodAssigned"
          },
          "ReadyToRun": {
            "Type": "Pass",
            "End": true
          }
        }
      }
    },
    "DownloadGem": {
      "Next": "PreProcessing",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "downloadGem",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PreProcessing": {
      "Next": "EmptyDrops",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "preproc",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "EmptyDrops": {
      "Next": "DoubletScores",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "emptyDrops",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScores": {
      "Next": "CreateSeurat",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "doubletScores",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CreateSeurat": {
      "Next": "PrepareExperiment",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "createSeurat",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PrepareExperiment": {
      "Next": "UploadToAWS",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "prepareExperiment",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "UploadToAWS": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "uploadToAWS",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      }
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-production-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"gem2s\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - gem2s staging 1`] = `

{
  "Comment": "Gem2s Pipeline for clusterEnv 'staging'",
  "StartAt": "RequestPod",
  "States": {
    "RequestPod": {
      "ResultPath": null,
      "Next": "WaitForPod",
      "Comment": "Send a message through SNS so that the API assigns a pod to the pipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-staging-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"assignPodToPipeline\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"experimentId\\":\\"mock-experiment-id\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"gem2s\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "WaitForPod": {
      "ResultPath": null,
      "Next": "DownloadGem",
      "Type": "Map",
      "ItemsPath": "$.retries",
      "MaxConcurrency": 1,
      "Retry": [
        {
          "ErrorEquals": [
            "NoPodAssigned"
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 13,
          "BackoffRate": 1.5
        }
      ],
      "Iterator": {
        "StartAt": "GetAssignedPod",
        "States": {
          "GetAssignedPod": {
            "Next": "IsPodAssigned",
            "Type": "Task",
            "Comment": "Retrieves first unassigned and running pipeline pod.",
            "Resource": "arn:aws:states:::eks:call",
            "Parameters": {
              "ClusterName": "mock-cluster-name",
              "CertificateAuthority": "mock-ca",
              "Endpoint": "https://RANDOMSTRING.gr7.eu-west-1.eks.amazonaws.com",
              "Method": "GET",
              "Path": "/api/v1/namespaces/pipeline-test-namespace/pods",
              "QueryParameters": {
                "labelSelector": [
                  "type=pipeline,activityId=biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713"
                ]
              }
            }
          },
          "IsPodAssigned": {
            "Type": "Choice",
            "Comment": "Redirects to an error state if the pipeline pod is not assigned yet.",
            "Choices": [
              {
                "Variable": "$.ResponseBody.items[0]",
                "IsPresent": false,
                "Next": "NoPodAssigned"
              }
            ],
            "Default": "ReadyToRun"
          },
          "NoPodAssigned": {
            "Type": "Fail",
            "Cause": "No available and running pipeline pods.",
            "Error": "NoPodAssigned"
          },
          "ReadyToRun": {
            "Type": "Pass",
            "End": true
          }
        }
      }
    },
    "DownloadGem": {
      "Next": "PreProcessing",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "downloadGem",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PreProcessing": {
      "Next": "EmptyDrops",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "preproc",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "EmptyDrops": {
      "Next": "DoubletScores",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "emptyDrops",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScores": {
      "Next": "CreateSeurat",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "doubletScores",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CreateSeurat": {
      "Next": "PrepareExperiment",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "createSeurat",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "PrepareExperiment": {
      "Next": "UploadToAWS",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "prepareExperiment",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "UploadToAWS": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "uploadToAWS",
        "processName": "gem2s",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local"
      }
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-staging-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-gem2s-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"gem2s\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - qc local development 1`] = `

{
  "Comment": "QC Pipeline for clusterEnv 'development'",
  "StartAt": "DeleteCompletedPipelineWorker",
  "States": {
    "DeleteCompletedPipelineWorker": {
      "Next": "LaunchNewPipelineWorker",
      "ResultPath": null,
      "Type": "Task",
      "Comment": "Removes Docker containers with pipeline runs on the local machine.",
      "Resource": "arn:aws:states:::lambda:invoke",
      "Parameters": {
        "FunctionName": "arn:aws:lambda:eu-west-1:mock-account-id:function:remove-previous-pipeline-containers"
      }
    },
    "LaunchNewPipelineWorker": {
      "Next": "ClassifierFilterMap",
      "ResultPath": null,
      "Type": "Task",
      "Resource": "arn:aws:states:::lambda:invoke",
      "Parameters": {
        "FunctionName": "arn:aws:lambda:eu-west-1:mock-account-id:function:local-container-launcher",
        "Payload": {
          "image": "biomage-pipeline-runner",
          "name": "qc-runner",
          "detached": true,
          "activityArn": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713"
        }
      }
    },
    "ClassifierFilterMap": {
      "Type": "Map",
      "Next": "CellSizeDistributionFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "ClassifierFilter",
        "States": {
          "ClassifierFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "classifier",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CellSizeDistributionFilterMap": {
      "Type": "Map",
      "Next": "MitochondrialContentFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "CellSizeDistributionFilter",
        "States": {
          "CellSizeDistributionFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "cellSizeDistribution",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "MitochondrialContentFilterMap": {
      "Type": "Map",
      "Next": "NumGenesVsNumUmisFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "MitochondrialContentFilter",
        "States": {
          "MitochondrialContentFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "mitochondrialContent",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "NumGenesVsNumUmisFilterMap": {
      "Type": "Map",
      "Next": "DoubletScoresFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "NumGenesVsNumUmisFilter",
        "States": {
          "NumGenesVsNumUmisFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "numGenesVsNumUmis",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScoresFilterMap": {
      "Type": "Map",
      "Next": "DataIntegration",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "DoubletScoresFilter",
        "States": {
          "DoubletScoresFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "doubletScores",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DataIntegration": {
      "Next": "ConfigureEmbedding",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "dataIntegration",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": true,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "ConfigureEmbedding": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "configureEmbedding",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": false,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-development-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - qc production 1`] = `

{
  "Comment": "QC Pipeline for clusterEnv 'production'",
  "StartAt": "RequestPod",
  "States": {
    "RequestPod": {
      "ResultPath": null,
      "Next": "WaitForPod",
      "Comment": "Send a message through SNS so that the API assigns a pod to the pipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-production-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"assignPodToPipeline\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"experimentId\\":\\"mock-experiment-id\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "WaitForPod": {
      "ResultPath": null,
      "Next": "ClassifierFilterMap",
      "Type": "Map",
      "ItemsPath": "$.retries",
      "MaxConcurrency": 1,
      "Retry": [
        {
          "ErrorEquals": [
            "NoPodAssigned"
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 13,
          "BackoffRate": 1.5
        }
      ],
      "Iterator": {
        "StartAt": "GetAssignedPod",
        "States": {
          "GetAssignedPod": {
            "Next": "IsPodAssigned",
            "Type": "Task",
            "Comment": "Retrieves first unassigned and running pipeline pod.",
            "Resource": "arn:aws:states:::eks:call",
            "Parameters": {
              "ClusterName": "mock-cluster-name",
              "CertificateAuthority": "mock-ca",
              "Endpoint": "https://RANDOMSTRING.gr7.eu-west-1.eks.amazonaws.com",
              "Method": "GET",
              "Path": "/api/v1/namespaces/pipeline-test-namespace/pods",
              "QueryParameters": {
                "labelSelector": [
                  "type=pipeline,activityId=biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713"
                ]
              }
            }
          },
          "IsPodAssigned": {
            "Type": "Choice",
            "Comment": "Redirects to an error state if the pipeline pod is not assigned yet.",
            "Choices": [
              {
                "Variable": "$.ResponseBody.items[0]",
                "IsPresent": false,
                "Next": "NoPodAssigned"
              }
            ],
            "Default": "ReadyToRun"
          },
          "NoPodAssigned": {
            "Type": "Fail",
            "Cause": "No available and running pipeline pods.",
            "Error": "NoPodAssigned"
          },
          "ReadyToRun": {
            "Type": "Pass",
            "End": true
          }
        }
      }
    },
    "ClassifierFilterMap": {
      "Type": "Map",
      "Next": "CellSizeDistributionFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "ClassifierFilter",
        "States": {
          "ClassifierFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "classifier",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CellSizeDistributionFilterMap": {
      "Type": "Map",
      "Next": "MitochondrialContentFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "CellSizeDistributionFilter",
        "States": {
          "CellSizeDistributionFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "cellSizeDistribution",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "MitochondrialContentFilterMap": {
      "Type": "Map",
      "Next": "NumGenesVsNumUmisFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "MitochondrialContentFilter",
        "States": {
          "MitochondrialContentFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "mitochondrialContent",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "NumGenesVsNumUmisFilterMap": {
      "Type": "Map",
      "Next": "DoubletScoresFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "NumGenesVsNumUmisFilter",
        "States": {
          "NumGenesVsNumUmisFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "numGenesVsNumUmis",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScoresFilterMap": {
      "Type": "Map",
      "Next": "DataIntegration",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "DoubletScoresFilter",
        "States": {
          "DoubletScoresFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "doubletScores",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DataIntegration": {
      "Next": "ConfigureEmbedding",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "dataIntegration",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": true,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "ConfigureEmbedding": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "configureEmbedding",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": false,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-production-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - qc production with specific CPUs & Mem 1`] = `

{
  "Comment": "QC Pipeline for clusterEnv 'production'",
  "StartAt": "SubmitBatchJob",
  "States": {
    "SubmitBatchJob": {
      "Next": "ClassifierFilterMap",
      "ResultPath": null,
      "Type": "Task",
      "Resource": "arn:aws:states:::batch:submitJob",
      "Parameters": {
        "JobDefinition": "job-pipeline-production",
        "JobName": "production-mock-experiment-id-qc",
        "JobQueue": "queue-pipeline-production",
        "ContainerOverrides": {
          "Environment": [
            {
              "Name": "EXPERIMENT_ID",
              "Value": "mock-experiment-id"
            },
            {
              "Name": "ACTIVITY_ARN",
              "Value": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713"
            },
            {
              "Name": "CLUSTER_ENV",
              "Value": "test"
            },
            {
              "Name": "AWS_DEFAULT_REGION",
              "Value": "eu-west-1"
            },
            {
              "Name": "AWS_ACCOUNT_ID",
              "Value": "000000000000"
            },
            {
              "Name": "SANDBOX_ID",
              "Value": "default"
            },
            {
              "Name": "BATCH",
              "Value": "true"
            },
            {
              "Name": "DOMAIN_NAME",
              "Value": "scp.biomage.net"
            },
            {
              "Name": "DD_API_KEY",
              "Value": "test-datadog-api-key"
            },
            {
              "Name": "DD_APP_KEY",
              "Value": "test-datadog-app-key"
            }
          ],
          "ResourceRequirements": [
            {
              "Type": "VCPU",
              "Value": "16"
            },
            {
              "Type": "MEMORY",
              "Value": "2048"
            }
          ]
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "ClassifierFilterMap": {
      "Type": "Map",
      "Next": "CellSizeDistributionFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "ClassifierFilter",
        "States": {
          "ClassifierFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "classifier",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CellSizeDistributionFilterMap": {
      "Type": "Map",
      "Next": "MitochondrialContentFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "CellSizeDistributionFilter",
        "States": {
          "CellSizeDistributionFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "cellSizeDistribution",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "MitochondrialContentFilterMap": {
      "Type": "Map",
      "Next": "NumGenesVsNumUmisFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "MitochondrialContentFilter",
        "States": {
          "MitochondrialContentFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "mitochondrialContent",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "NumGenesVsNumUmisFilterMap": {
      "Type": "Map",
      "Next": "DoubletScoresFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "NumGenesVsNumUmisFilter",
        "States": {
          "NumGenesVsNumUmisFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "numGenesVsNumUmis",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScoresFilterMap": {
      "Type": "Map",
      "Next": "DataIntegration",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "DoubletScoresFilter",
        "States": {
          "DoubletScoresFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "doubletScores",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DataIntegration": {
      "Next": "ConfigureEmbedding",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "dataIntegration",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": true,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "ConfigureEmbedding": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "configureEmbedding",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": false,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-production-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;

exports[`non-tests to document the State Machines - qc staging 1`] = `

{
  "Comment": "QC Pipeline for clusterEnv 'staging'",
  "StartAt": "RequestPod",
  "States": {
    "RequestPod": {
      "ResultPath": null,
      "Next": "WaitForPod",
      "Comment": "Send a message through SNS so that the API assigns a pod to the pipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-staging-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"assignPodToPipeline\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"experimentId\\":\\"mock-experiment-id\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "WaitForPod": {
      "ResultPath": null,
      "Next": "ClassifierFilterMap",
      "Type": "Map",
      "ItemsPath": "$.retries",
      "MaxConcurrency": 1,
      "Retry": [
        {
          "ErrorEquals": [
            "NoPodAssigned"
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 13,
          "BackoffRate": 1.5
        }
      ],
      "Iterator": {
        "StartAt": "GetAssignedPod",
        "States": {
          "GetAssignedPod": {
            "Next": "IsPodAssigned",
            "Type": "Task",
            "Comment": "Retrieves first unassigned and running pipeline pod.",
            "Resource": "arn:aws:states:::eks:call",
            "Parameters": {
              "ClusterName": "mock-cluster-name",
              "CertificateAuthority": "mock-ca",
              "Endpoint": "https://RANDOMSTRING.gr7.eu-west-1.eks.amazonaws.com",
              "Method": "GET",
              "Path": "/api/v1/namespaces/pipeline-test-namespace/pods",
              "QueryParameters": {
                "labelSelector": [
                  "type=pipeline,activityId=biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713"
                ]
              }
            }
          },
          "IsPodAssigned": {
            "Type": "Choice",
            "Comment": "Redirects to an error state if the pipeline pod is not assigned yet.",
            "Choices": [
              {
                "Variable": "$.ResponseBody.items[0]",
                "IsPresent": false,
                "Next": "NoPodAssigned"
              }
            ],
            "Default": "ReadyToRun"
          },
          "NoPodAssigned": {
            "Type": "Fail",
            "Cause": "No available and running pipeline pods.",
            "Error": "NoPodAssigned"
          },
          "ReadyToRun": {
            "Type": "Pass",
            "End": true
          }
        }
      }
    },
    "ClassifierFilterMap": {
      "Type": "Map",
      "Next": "CellSizeDistributionFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "ClassifierFilter",
        "States": {
          "ClassifierFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "classifier",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "CellSizeDistributionFilterMap": {
      "Type": "Map",
      "Next": "MitochondrialContentFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "CellSizeDistributionFilter",
        "States": {
          "CellSizeDistributionFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "cellSizeDistribution",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "MitochondrialContentFilterMap": {
      "Type": "Map",
      "Next": "NumGenesVsNumUmisFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "MitochondrialContentFilter",
        "States": {
          "MitochondrialContentFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "mitochondrialContent",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "NumGenesVsNumUmisFilterMap": {
      "Type": "Map",
      "Next": "DoubletScoresFilterMap",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "NumGenesVsNumUmisFilter",
        "States": {
          "NumGenesVsNumUmisFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "numGenesVsNumUmis",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DoubletScoresFilterMap": {
      "Type": "Map",
      "Next": "DataIntegration",
      "ResultPath": null,
      "ItemsPath": "$.samples",
      "Iterator": {
        "StartAt": "DoubletScoresFilter",
        "States": {
          "DoubletScoresFilter": {
            "End": true,
            "Type": "Task",
            "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
            "ResultPath": null,
            "TimeoutSeconds": 10800,
            "HeartbeatSeconds": 90,
            "Parameters": {
              "experimentId": "mock-experiment-id",
              "taskName": "doubletScores",
              "processName": "qc",
              "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
              "sampleUuid.$": "$.sampleUuid",
              "uploadCountMatrix": false,
              "authJWT": "mockAuthJWT",
              "config": {}
            }
          }
        }
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "DataIntegration": {
      "Next": "ConfigureEmbedding",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "dataIntegration",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": true,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "ConfigureEmbedding": {
      "Next": "EndOfPipeline",
      "Type": "Task",
      "Resource": "arn:aws:states:eu-west-1:28592648592:activity:biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713",
      "ResultPath": null,
      "TimeoutSeconds": 10800,
      "HeartbeatSeconds": 90,
      "Parameters": {
        "experimentId": "mock-experiment-id",
        "taskName": "configureEmbedding",
        "processName": "qc",
        "server": "remoter-server-mock-experiment-id.pipeline-test-namespace.svc.cluster.local",
        "sampleUuid": "",
        "uploadCountMatrix": false,
        "authJWT": "mockAuthJWT",
        "config": {}
      },
      "Catch": [
        {
          "ErrorEquals": [
            "States.Timeout"
          ],
          "ResultPath": "$.error-info",
          "Next": "HandleTimeoutError"
        }
      ]
    },
    "HandleTimeoutError": {
      "Next": "MarkAsFailed",
      "Type": "Task",
      "Resource": "arn:aws:states:::sns:publish",
      "Parameters": {
        "TopicArn": "arn:aws:sns:eu-west-1:mock-account-id:work-results-staging-pipeline-assignation-v2",
        "Message": "{\\"taskName\\":\\"pipelineError\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"apiUrl\\":\\"test-public-api-url\\",\\"input\\":{\\"authJWT\\":\\"mockAuthJWT\\",\\"experimentId\\":\\"mock-experiment-id\\",\\"error\\":\\"TIMED_OUT\\",\\"taskName\\":\\"pipelineError\\",\\"sandboxId\\":\\"pipeline-assignation\\",\\"activityId\\":\\"biomage-qc-production-39249897-cfce-402b-a617-e58fbf251713\\",\\"processName\\":\\"qc\\"}}",
        "MessageAttributes": {
          "type": {
            "DataType": "String",
            "StringValue": "PipelineResponse"
          }
        }
      }
    },
    "MarkAsFailed": {
      "Type": "Fail",
      "Cause": "Timeout"
    },
    "EndOfPipeline": {
      "Type": "Pass",
      "End": true
    }
  }
}
`;
